[package]
name = "lucy_rs"
version = "0.1.0"
authors = ["Slangens <19713098+Slangens@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
#songbird = "*"
#rand = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

#[[bin]]
#name = "lucybot"
#path = "src/lucybot.rs"