[package]
name = "lucy_rs"
version = "0.1.0"
authors = ["Slangens <19713098+Slangens@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.9", features = ["voice"]}
#, default-features = false, features = ["client", "gateway", "rustls_backend", "model"]
songbird = {version = "*", features = ["builtin-queue"]}
#rand = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

#[[bin]]
#name = "lucybot"
#path = "src/lucybot.rs"